Changes behaviour of card opening on read more event (prevents other blocks to stretch)

--- a/src/sass/components/products/_product-card.scss
+++ b/src/sass/components/products/_product-card.scss
@@ -1,5 +1,6 @@
 .product-card {
     position: relative;
+    align-self: flex-start;
     padding-top: 161px;
     padding-right: 41px;
     padding-left: 41px;
